...
    
    func setProgressHidden(_ isHidden: Bool) {
        progressView.isHidden = isHidden
    }
    
    private func setUpAccessibility() {
        webView.accessibilityIdentifier = "UnsplashWebView"
    }
}

extension WebViewViewController: WKNavigationDelegate {
    func webView( _ webView: WKWebView,
                  decidePolicyFor navigationAction: WKNavigationAction,
...
