...
                                                           action: nil)
        
        navigationItem.backBarButtonItem?.tintColor = UIColor(named: "YBlack")
    }
    
    private func setUpAccessibility() {
        loginButton.accessibilityIdentifier = "Authenticate"
    }
}

extension AuthViewController: WebViewViewControllerDelegate {
    func webViewViewController(_ vc: WebViewViewController, didAuthenticateWithCode code: String) {
    
...
